MAINT-2674 Add client side support for fetching activity for users on branch, and refactor to improve quality score